--- a/assets/styles/standard.css
+++ b/assets/styles/standard.css
@@ -1,4 +1,5 @@
 body, html, ul {
+  overflow-x: hidden;
   box-sizing: border-box;
   scroll-behavior: smooth;
   margin: 0;
